<resources>
    <string name="app_name">Yapi</string>
    <string name="delete_group_title">Do you want to Delete Group?</string>
    <string name="delete_group_des">This can not be undone in future. Lorem \nipsom dolor sit amet.</string>
    <string name="delete_group_text">Delete Group</string>
    <string name="leave_group_title">Do you want to Leave Group?</string>
    <string name="leave_group_des">This conversation will be archived, and you \nwill not get any new messages.</string>
    <string name="leave_group">Leave Group</string>
    <string name="cancel_txt">Cancel</string>
    <string name="check_internet_connection">Please check internet connection</string>
    <string name="create_workspace">Create a new Workspace</string>
    <string name="signup_description">Yapi team is - a place where they can talk \nand work together. To create a new team \nclick on the button</string>
    <string name="create_team">Create a team</string>
    <string name="accept_invitation">Accept Invitation</string>
    <string name="signup_info">We suggest using the email address you use\nat work</string>
    <string name="emailAddress"> EMAIL ADDRESS</string>
    <string name="enterEmail">Enter Email Address</string>
    <string name="ccontinue">Continue</string>
    <string name="these_invitation_for">These invitations are for</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="signInInfo">Sign in to start the communications with \nyour mates</string>
    <string name="email">EMAIL<font color="red">*</font></string>
    <string name="password">PASSWORD<font color="red">*</font></string>
    <string name="enterPassword">Enter Password</string>
    <string name="don_t_have_an_account">Don’t have an account? </string>
    <string name="signup_text"> Sign up</string>
    <string name="join_now">Join Now</string>
    <string name="search">Search</string>
    <string name="yapibot">yapibot</string>
    <string name="groups">GROUPS</string>
    <string name="createGroup">CREATE GROUP</string>
    <string name="jobs">JOBS</string>
    <string name="customers">CUSTOMERS</string>
    <string name="team">TEAM</string>
    <string name="createGroups_text">CREATE GROUPS</string>
    <string name="stemp_size">Step 1 of 3</string>
    <string name="company_name_title">What’s the name of your \nteam or company</string>
    <string name="company_name_description">This will be the name of your yapi \nworkspace- choose something that your \nteam will recognise</string>
    <string name="comany_name">Team or Company name</string>
    <string name="create_team_checkbox_text">Let anyone with an <b><font color='3d3d3d'>@Qbistro.com</font></b> \nemail address join this workspace.</string>
    <string name="company_name_second_title">What\'s your team working on \nright now?</string>
    <string name="company_name_second_step_description">This could be anything: a project, campaign, \nevent or the deal.</string>
    <string name="enter_name">Enter a name</string>
    <string name="what_working_on">What are you working on?</string>
    <string name="second_stemp_size">Step 2 of 3</string>
    <string name="third_stemp_size">Step 3 of 3</string>
    <string name="add_your_team_mates">Add your team mates</string>
    <string name="third_step_description">To give slack a spin, add a few coworkers \nthat you talk to regularly.
</string>
    <string name="members_email_title">Member’s Email</string>
    <string name="enter_email">Enter email</string>
    <string name="add_member_text">ADD MEMBERS</string>
    <string name="skip_this_step">Skip this step</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="otp_screen_description">We\'ve sent a 6-character code to \n<font color="#3d3d3d">sulaman.abir@gmail.com</font>. The code expires \nshortly. Please enter it soon.</string>
    <string name="cannot_find_code">Can’t find your code? Check spam folder!</string>
    <string name="check_your_email_for_code">Check your email for a code</string>
    <string name="settings">SETTINGS</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about">ABOUT</string>
    <string name="role">ROLE</string>
    <string name="contact_info">Contact Info</string>
    <string name="region">Region</string>
    <string name="account_infor">Account Info</string>
    <string name="deactivate_your_account">Deactivate your account</string>
    <string name="delete_account">Delete Account</string>
    <string name="profile_image">PROFILE IMAGE</string>
    <string name="upload">UPLOAD</string>
    <string name="uploadImageCondition">5.0mb size jpg, png, jpeg format image acepted</string>
    <string name="name">NAME</string>
    <string name="userName">USERNAME</string>
    <string name="enterUserName">Enter User Name</string>
    <string name="emaill">EMAIL Address</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="about_yourself">ABOUT YOURSELF</string>
    <string name="aboutSelf">Write about yourself</string>
    <string name="done">Done</string>
    <string name="de_active">Deactivate</string>
    <string name="subTitleDeActiveAccountDilaog">If you deactivate your account, you won’t be able to receive messages. You can activate</string>
    <string name="titleDeActiveAccountDialog">Do you want to\ndeactivate your account?</string>
    <string name="group_image">GROUP IMAGE<font color="#B8B8B8"> (OPTIONAL)</font></string>
    <string name="group_imageW">GROUP IMAGE</string>
    <string name="groupName">Group Name<font color="red">*</font></string>
    <string name="_0_128">0/128</string>
    <string name="enterGroupName">Enter a group name</string>
    <string name="group_description">GROUP DESCRIPTION<font color="red">*</font></string>
    <string name="maxLenthGroupDescription">0/256</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="make_private">MAKE PRIVATE</string>
    <string name="MakePrivateInfo">Private can only be viewed or joined by invitation.</string>
    <string name="view_profile">View Profile</string>
    <string name="settings_text">Settings</string>
    <string name="logout_text">Logout</string>
    <string name="search_member_by_name">Search member by name</string>
    <string name="send_email_invitations">Send Email Invitations</string>
    <string name="business_nunits">Business\nUnits</string>
    <string name="job_ntype">Job\nType</string>
    <string name="add_teammates">ADD TEAMMATES</string>
    <string name="add_customers">ADD CUSTOMERS</string>
    <string name="add_lead">ADD LEAD</string>
    <string name="delete_account_title">Do you want to Delete \nAccount?</string>
    <string name="delete_account_description">Do you really want to delete this account? This process cannot be undone.</string>
    <string name="delete_text">Delete</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="you_have_invited_one_person">You have invited one person</string>
    <string name="chat_text">Chat</string>
    <string name="email_text">Email</string>
    <string name="sms_text">SMS</string>
    <string name="invites_from_crm_text">Invites From CRM</string>
    <string name="clientid_title">Client Id</string>
    <string name="write_clientid_title">Write Client ID</string>
    <string name="client_secret_title">Client secret</string>
    <string name="write_secret_number_title">Write secret number</string>
    <string name="tenant_id_title">Tenant Id</string>
    <string name="tenant_id_value">Write tenant ID</string>
    <string name="app_key_title">app key</string>
    <string name="app_key_value">Write app key number</string>
    <string name="Invite_textt">Invite</string>
    <string name="add_teammates_text">ADD Teammates</string>
    <string name="add_member_text_third_step">Add member</string>
    <string name="conversations">CONVERSATIONS</string>
    <string name="add_conversation">ADD CONVERSATION</string>
    <string name="create_group_description">GROUP DESCRIPTION</string>
    <string name="code_first_part">We\'ve sent a 6-character code to \n</string>
    <string name="code_last_part">.The code expires \nshortly. Please enter it soon.</string>
    <string name="create_team_first_text">Let anyone with an </string>
    <string name="create_team_last_text">\nemail address join this workspace.</string>
    <string name="edit_group">Edit Group</string>
    <string name="group_name">GROUP NAME</string>
    <string name="created_by">CREATED BY</string>
    <string name="managed_by">MANAGED BY</string>
    <string name="status">STATUS</string>
    <string name="additional_info">Additional Info</string>
    <string name="los_nangels">Los\nAngels</string>
    <string name="search_files">Search files</string>
    <string name="files">Files</string>
    <string name="sort">SORT:</string>
    <string name="most_relevant">MOST RELEVANT</string>
    <string name="date">DATE</string>
    <string name="created_group_title_chat">You have created a Group</string>
    <string name="groups_can_have">Groups can have:</string>
    <string name="persistant_chat_history">Persistant chat history</string>
    <string name="public_links">Public links</string>
    <string name="admin_manager_text_chat">Admin, Managers with different rights</string>
    <string name="view_group_info">View group info</string>
    <string name="add_template_title">Add Template</string>
    <string name="add_template_description">Lorem Ipsom dolow sit amet</string>
    <string name="message_title_text">Message title</string>
    <string name="write_message_title">Write Message Title</string>
    <string name="message_content_text">message content</string>
    <string name="write_message_content">Write Message Content</string>
    <string name="save_text">Save</string>
    <string name="search_for_files">Search for files</string>
    <string name="attachments_text">Attachments</string>
    <string name="upload_from_google_drive">Upload from google drive</string>
    <string name="recent_files">Recent files</string>
    <string name="Upload_from_your_computer">Upload from your computer</string>
    <string name="add_link_text">Add Link</string>
    <string name="text_to_display">Text to display</string>
    <string name="paste_link">Paste link</string>
    <string name="mute_notification">Mute Notification</string>
    <string name="delete_chat_text">Delete Chat</string>
    <string name="Call_text">Call</string>
    <string name="information_text">Information</string>
    <string name="previous_jobs">Previous Jobs</string>
    <string name="previous_estimations">Previous Estimations</string>
    <string name="balance_text">Balance</string>
    <string name="activity_text">Activity</string>
    <string name="media_text">Media</string>
    <string name="view_all">View All</string>
    <string name="links_text">Links</string>
    <string name="view_messages_text">View Messages</string>
    <string name="Files_text">Files</string>
    <string name="templates_text">Templates</string>
    <string name="add_text">Add</string>
    <string name="hello_text"><font color='#B8B8B8'>Hello</font>  <font color='#3D3D3D'>Lincoln</font></string>
    <string name="source_lead">source of lead</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="email_address_text">eMail Address</string>
    <string name="address_text">Address</string>
    <string name="view_group_info_textt">View Group Info</string>
    <string name="delete_group">Delete Group</string>
    <string name="you_have_invited">You have invited</string>
    <string name="one_person">person</string>
</resources>