<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgDeActiveAccountDialog"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/topMainMargin"
        android:src="@drawable/de_active_drawable"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/txtTitleDeActiveProfile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/titleDeActiveAccountDialog"
    android:gravity="center"
    android:fontFamily="@font/larsseit_bold"
    android:textColor="@color/darkGrey"
    android:textSize="@dimen/IconTextSize"
    app:layout_constraintTop_toBottomOf="@+id/imgDeActiveAccountDialog"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />
<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/txtSubTitleDeActiveProfile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/subTitleDeActiveAccountDilaog"
    android:gravity="center"
    android:fontFamily="@font/larsseit_regular"
    android:textColor="@color/darkGrey"
    android:textSize="@dimen/normalTextSize"
    android:layout_marginTop="@dimen/topFiveMargin"
    app:layout_constraintTop_toBottomOf="@+id/txtTitleDeActiveProfile"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancelDeActiveDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_txt"
        android:textColor="@color/darkGrey"
        android:fontFamily="@font/larsseit_bold"
        android:layout_marginStart="@dimen/topMargin"
        android:background="@drawable/round_lite_gray"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingTop="@dimen/etVerticalPadding"
        android:paddingBottom="@dimen/etVerticalPadding"
        android:paddingStart="@dimen/etHorizontalPadding"
        android:paddingEnd="@dimen/etHorizontalPadding"
        app:layout_constraintEnd_toStartOf="@+id/btnDeActiveDialog"
        app:layout_constraintTop_toBottomOf="@+id/txtSubTitleDeActiveProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_25sdp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeActiveDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/de_active"
        android:textAllCaps="true"
        android:background="@drawable/rounded_background"
        android:paddingTop="@dimen/etVerticalPadding"
        android:paddingBottom="@dimen/etVerticalPadding"
        android:textColor="@color/white"
        android:backgroundTint="@color/blueColor"
        android:layout_marginStart="@dimen/topMargin"
        android:fontFamily="@font/larsseit_bold"
        android:layout_marginEnd="@dimen/topMargin"
        android:paddingStart="@dimen/etHorizontalPadding"
        android:paddingEnd="@dimen/etHorizontalPadding"
        app:layout_constraintTop_toTopOf="@+id/btnCancelDeActiveDialog"
        app:layout_constraintBottom_toBottomOf="@+id/btnCancelDeActiveDialog"
        app:layout_constraintStart_toEndOf="@+id/btnCancelDeActiveDialog"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>