<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screen_background"
        android:orientation="vertical"
        android:weightSum="100">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/logo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="65"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/tvFirstStepSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:fontFamily="@font/larsseit_bold"
                        android:text="@string/second_stemp_size"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvFirsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:fontFamily="@font/larsseit_bold"
                        android:gravity="center"
                        android:text="@string/company_name_second_title"
                        android:textColor="@color/darkGrey"
                        android:letterSpacing="0.03"
                        android:textSize="@dimen/mobileTitleTextSize"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvFirstStepSize" />

                    <TextView
                        android:id="@+id/tvFirsDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/larsseit_regular"
                        android:gravity="center"
                        android:letterSpacing="0.07"
                        android:lineSpacingExtra="@dimen/_5sdp"
                        android:text="@string/company_name_second_step_description"
                        android:textColor="@color/darkLiteGrey"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvFirsTitle" />

                    <TextView
                        android:id="@+id/tvteamField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/startMainMargin"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:fontFamily="@font/larsseit_medium"
                        android:gravity="center"
                        android:text="@string/what_working_on"
                        android:textAllCaps="true"
                        android:textColor="@color/darkGrey"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvFirsDescription" />

                    <TextView
                        android:id="@+id/tvteamFieldCont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/startMainMargin"
                        android:fontFamily="@font/larsseit_medium"
                        android:gravity="center"
                        android:text="7/50"
                        android:textAllCaps="true"
                        android:textColor="@color/darkLiteGrey"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvFirsDescription" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etTeamName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/startMainMargin"
                        android:layout_marginEnd="@dimen/startMainMargin"
                        android:background="@drawable/et_drawable"
                        android:hint="@string/enter_name"
                        android:padding="@dimen/_10sdp"
                        android:fontFamily="@font/larsseit_regular"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:textSize="@dimen/normalTextSize"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvteamField" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/bottomMarggin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstTeamCheck">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSecondCreateTeam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/startMainMargin"
                    android:layout_marginEnd="@dimen/startMainMargin"
                    android:background="@drawable/rounded_background"
                    android:backgroundTint="@color/blueColor"
                    android:fontFamily="@font/larsseit_bold"
                    android:text="@string/ccontinue"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


    </LinearLayout>

</layout>