<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivCross"
            android:src="@drawable/ic_cross_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="@dimen/iconSize"

            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_height="@dimen/iconSize"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCross"
            app:layout_constraintBottom_toTopOf="@+id/bottomConstarints"
            android:layout_height="0dp">
            <ImageView
                android:id="@+id/ivDelete"
                android:src="@drawable/leave_group_logo"
                android:layout_width="@dimen/_277sdp"
                android:padding="@dimen/_15sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="@dimen/_340sdp"/>
            <TextView
                android:id="@+id/tvDeleteTitle"
                android:text="@string/leave_group_title"
                android:layout_width="wrap_content"
                android:fontFamily="@font/larsseit_bold"
                android:textSize="@dimen/titleTextSize"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/ivDelete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:lineSpacingExtra="@dimen/line_spacing_extra"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/leave_group_des"
                android:layout_width="wrap_content"
                android:textSize="@dimen/normalTextSize"
                android:gravity="center_horizontal"
                android:fontFamily="@font/larsseit_regular"
                android:layout_marginTop="@dimen/_10sdp"
                android:lineSpacingExtra="@dimen/line_spacing_extra"
                app:layout_constraintTop_toBottomOf="@+id/tvDeleteTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="#8F8F8F"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomConstarints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background"
                android:backgroundTint="#F5F5F5"
                android:paddingStart="@dimen/etHorizontalPadding"
                android:paddingTop="@dimen/etVerticalPadding"
                android:paddingEnd="@dimen/etHorizontalPadding"
                android:paddingBottom="@dimen/etVerticalPadding"
                android:text="@string/cancel_txt"
                android:fontFamily="@font/larsseit_bold"
                android:textAllCaps="true"
                android:stateListAnimator="@null"
                android:textColor="@color/black"
                android:textSize="@dimen/normalTextSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnDelGroup"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDelGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background"
                android:backgroundTint="#3D97F2"
                android:paddingStart="@dimen/etHorizontalPadding"
                android:paddingTop="@dimen/etVerticalPadding"
                android:paddingEnd="@dimen/etHorizontalPadding"
                android:paddingBottom="@dimen/etVerticalPadding"
                android:text="@string/leave_group"
                android:textAllCaps="true"
                android:stateListAnimator="@null"
                android:fontFamily="@font/larsseit_bold"
                android:textColor="@color/white"
                android:textSize="@dimen/normalTextSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnCancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>